Using adminLTE template and adding endpoints for sleep features
