# mykid-service/mykid-rest-adapter/src/main/java/org/jzeratul/mykid/rest/StatsEndpoints.java
@@ -6,7 +6,10 @@ import java.util.Optional;
 import javax.validation.Valid;
 
 import org.jzeratul.mykid.api.MyKidApi;
+import org.jzeratul.mykid.model.GetSleepResponse;
 import org.jzeratul.mykid.model.GetStatsResponse;
+import org.jzeratul.mykid.model.GetStatsSummaryResponse;
+import org.jzeratul.mykid.model.Sleep;
 import org.jzeratul.mykid.model.Stats;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -54,5 +57,45 @@ public class StatsEndpoints implements MyKidApi {
 
     return ResponseEntity.noContent().build();
   }
+
+	@Override
+	public ResponseEntity<GetStatsSummaryResponse> getStatsSummary() {
+
+    OffsetDateTime start = OffsetDateTime.now();
+    OffsetDateTime end = start.minusDays(1).withHour(0).withMinute(0);
+    
+    var stats = statsService.getStats(start, end);
+    
+		GetStatsSummaryResponse resp = new GetStatsSummaryResponse();
+		resp.setTotals(stats.getDailyTotals());
+		
+		return ResponseEntity.ok(resp);
+	}
+
+	@Override
+	public ResponseEntity<GetSleepResponse> getSleep() {
+
+    OffsetDateTime end = OffsetDateTime.now();
+    OffsetDateTime start = end.minusDays(7);
+
+    var sleep = statsService.getSleep(start, end);
+		
+		return ResponseEntity.ok(sleep);
+	}
+
+	@Override
+	public ResponseEntity<Void> saveSleep(@Valid Sleep sleep) {
+
+    statsService.storeSleep(sleep);
+    
+    return ResponseEntity.noContent().build();
+	}
+
+	@Override
+	public ResponseEntity<Void> deleteSleep(@Valid Sleep sleep) {
+
+    statsService.deleteSleep(sleep);
+    return ResponseEntity.ok().build();
+	}
 
 }
